# mmi-parser-rs

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile
data/: AA_sample.txt  AA_sample_parsed.jsonl  MMI_sample_parsed.jsonl  sample.json  sample.txt  sample_parsed.json  sample_parsed.jsonl
examples/: parse.rs  parse_AA.rs  parse_MMI.rs  parse_aa.rs  parse_mmi.rs
scripts/: test_with_coverage.sh
src/: lib.rs  main.rs
