[package]
name = "mmi-parser"
version = "0.1.2"
edition = "2021"
authors = ["Nick Anthony"]
description = "A parser for MetaMap MMI output."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UK-IPOP/mmi-parser-rs"
repository = "https://github.com/UK-IPOP/mmi-parser-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1.8", features = ["derive"] }
