[package]
name = "mmi-parser"
version = "2.0.0"
edition = "2021"
authors = ["Nick Anthony <nicholas.anthony@uky.edu>"]
description = "A parser for Fielded MetaMap (MMI) output."
license = "MIT"
repository = "https://github.com/UK-IPOP/mmi-parser-rs"
keywords = ["cli", "metamap", "mmi", "parser"]
categories = ["command-line-interface", "parsing"]
readme = "README.md"


[dependencies]
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1.8", features = ["derive"] }
indicatif = "0.16.2"
walkdir = "2"
